Aligned two columns and next button stops showing up after problem is over

--- a/public/expressions/expressionsindex.css
+++ b/public/expressions/expressionsindex.css
@@ -15,7 +15,7 @@ h1 {
 #steps {
 	margin-left: auto;
 	margin-right: auto;
-	width: 650px;
+	width: 500px;
 	padding-bottom: 20px;
 }
 
@@ -24,12 +24,17 @@ h1 {
 	text-align: left;
 	float: left;
 	width: 180pt;
+	height: 50pt;
+	margin: 0pt;
 }
 
 .exp {
 	float: right;
 	font-size: 25pt;
 	/*width: 350px;*/
+	text-align: center;
+	height: 50pt;
+	margin: 0pt;
 }
 #answerbox {
 	margin-left: auto;
@@ -59,6 +64,8 @@ h2 {
 .buttonLineUp {
 	margin-right: 35%;
 	margin-left: 50%;
+	clear:both;
+	float:right;
 }
 
 .highlight1 {
